# Metal-Game-Engine

./: .gitignore  FImageBundler.cpp  FImageBundler.h  action_list.txt  extra_life.3dp  multiples-12.txt
(( Possible Sections))/: easymed_marquee_of_bricks_some_weird_formations.json
Assets/: butterfly_wings.3ds  prop_billboard.3ds
Assets - Removed/: butterfly_body.3ds  prop_billboard_no_normals.3ds
Bitmap Fonts (256)/: candy_beans.fnt  mont_heavy.fnt  mont_light.fnt  moon_get.fnt
Classes/: Balloon.cpp  Balloon.hpp  Bomb.cpp  BrickHead.cpp  BrickHead.hpp  Constraint.cpp  Constraint.hpp  Dart.cpp  Dart.hpp  DiffuseConfiguration.cpp  DiffuseConfiguration.hpp  EditorMenuPath.cpp  EditorMenuPath.hpp  EditorMenuPathControl.cpp  EditorMenuPathControl.hpp  EditorMenuSections.cpp  EditorMenuSections.hpp  EditorMenuSpawn.cpp  EditorMenuSpawn.hpp  EditorMenuWaves.cpp  EditorMenuWaves.hpp  EditorMenuWavesPicker.cpp  EditorMenuWavesPicker.hpp  FloatingCamera.cpp  FormationCollection.cpp  FormationCollection.hpp  FreeLife.cpp  FreeLife.hpp  GFXApp.cpp  GFXApp.hpp  GFXApp.mm  GFXAppNotificationHelper.cpp  GFXAppNotificationHelper.hpp  Game.cpp  Game.hpp  GameBoard.cpp  GameBoard.hpp  GameContainer.cpp  GameContainer.hpp  GameEditor.cpp  (+86 more)
CrazyDarts2Android/: local.properties
CrazyDarts2Android/app/src/main/cpp/: AssetConfigMenu.cpp  AssetWad.cpp  AssetWad.hpp  AssetWadGameEffects.cpp  AssetWadGameEffects.hpp  AssetWadGameInterface.cpp  AssetWadGameInterface.hpp  Balloon.cpp  Balloon.hpp  Bomb.hpp  CMakeLists.txt  CameraMenu.cpp  CameraMenu.hpp  Constraint.hpp  Dart.cpp  Dart.hpp  DiffuseLightMenu.hpp  EditorMenuAttachment.cpp  EditorMenuAttachment.hpp  EditorMenuFlow.cpp  EditorMenuFlow.hpp  EditorMenuFormation.cpp  EditorMenuFormation.hpp  EditorMenuFormationGrid.cpp  EditorMenuFormationGrid.hpp  EditorMenuFormationPicker.cpp  EditorMenuFormationPickerCell.cpp  EditorMenuFormationPickerCell.hpp  EditorMenuFormationSpawnPicker.hpp  EditorMenuFormationUtilities.cpp  EditorMenuFormationUtilities.hpp  EditorMenuGameTest.cpp  EditorMenuGameTestUtils.cpp  EditorMenuMotionTypePanel.cpp  EditorMenuMotionTypePanel.hpp  EditorMenuObjectClearing.hpp  EditorMenuPath.cpp  EditorMenuPath.hpp  EditorMenuPathControl.hpp  EditorMenuPermPicker.hpp  (+264 more)
Documents/: .dat.nosync193b.eoXk8S  clear_backup.json  clear_backup_ok.json  clear_backup_r.json  editor_autosave_0.json  editor_autosave_1.json  editor_autosave_2.json  editor_autosave_3.json  editor_autosave_4.json  editor_autosave_5.json  editor_autosave_6.json  editor_autosave_7.json  editor_autosave_8.json  editor_autosave_9.json  editor_config.json  editor_grid_dots.json  editor_pasteboard_perm.json  editor_pasteboard_perm_spawn.json  editor_pasteboard_wave.json  editor_pasteboard_wave_spawn.json  editor_test_section.json  export_section_0.json  export_section_1.json  export_section_3.json  export_section_4.json  export_section_5.json  export_section_6.json  export_section_7.json  export_section_8.json  export_section_9.json  f_.json  f_grid_6sid_50rngs_2rngc_40pnts_6pnts_95ful__nodes_cfg18xb.json  f_grid_6sid_50rngs_2rngc_40pnts_6pnts__nodes_cfgrbrrbrbbbbrrrbbbrbb.json  f_grid_rect_1x1_44spc_0ful__nodes_cfg15xb0on15off__tr_rrct_200sz_65cr_cfg6xb_spxs.json  f_grid_rect_1x1_44spc_solid__nodes_cfg1xb__tr_circ_110sz_cfg6xb_spms.json  f_grid_rect_3x3_44spc__nodes_cfg3xb.json  f_grid_rect_3x3_44spc__nodes_cfgbrrrbbbrb.json  f_grid_rect_3x3_44spc__nodes_cfgrbbrrbrrb.json  f_grid_rect_3x3_44spc__nodes_cfgrrrbbbrbb.json  f_grid_rect_3x3_44spc_solid__nodes_cfg9xb.json  (+31 more)
Exports/: bndl_bblast_1_data.json  bndl_bblast_2_data.json  bndl_bblast_3_data.json  bndl_sys_font_data.json  candy_beans_256_font.kern  dart.3dp  form_all_nod_all_bln_grd_36ful_nodes_cfg9xb_snp.json  form_all_nod_all_bln_grd_cir_28rsp_1rct_3rdc_75ful_nodes_cfg3xb_snp.json  form_all_nod_all_bln_grd_cir_32rsp_1rct_4rdc_80ful_nodes_cfg4xb_snp.json  form_all_nod_all_bln_grd_cir_34rsp_1rct_4rdc_80ful_nodes_cfg4xb_snp.json  form_all_nod_all_bln_grd_cir_40rsp_1rct_5rdc_83ful_nodes_cfg5xb_snp.json  form_all_nod_all_bln_grd_cir_48rsp_1rct_6rdc_86ful_nodes_cfg6xb_snp.json  form_all_nod_all_bln_grd_cir_48rsp_1rct_6rdc_sld_nodes_cfg7xb_snp.json  form_all_nod_all_bln_grd_cir_54rsp_1rct_7rdc_88ful_nodes_cfg7xb_snp.json  form_all_nod_all_bln_grd_cir_54rsp_1rct_7rdc_sld_nodes_cfg8xb_snp.json  form_all_nod_all_bln_grd_cir_56rsp_1rct_7rdc_88ful_nodes_cfg7xb_snp.json  form_all_nod_all_bln_grd_cir_56rsp_1rct_7rdc_sld_nodes_cfg8xb_snp.json  form_all_nod_all_bln_grd_cir_60rsp_2rct_16rdc_73ful_nodes_cfg24xb_snp.json  form_all_nod_all_bln_grd_cir_64rsp_1rct_8rdc_89ful_nodes_cfg8xb_snp.json  form_all_nod_all_bln_grd_cir_64rsp_1rct_8rdc_sld_nodes_cfg9xb_snp.json  form_all_nod_all_bln_grd_cir_64rsp_2rct_16rdc_48ful_nodes_cfg16xb_snp.json  form_all_nod_all_bln_grd_cir_64rsp_2rct_16rdc_76ful_nodes_cfg25xb_snp.json  form_all_nod_all_bln_grd_cir_66rsp_1rct_9rdc_90ful_nodes_cfg9xb_snp.json  form_all_nod_all_bln_grd_cir_66rsp_1rct_9rdc_sld_nodes_cfg10xb_snp.json  form_all_nod_all_bln_grd_cir_72rsp_1rct_10rdc_sld_nodes_cfg11xb_snp.json  form_all_nod_all_bln_grd_cir_72rsp_2rct_20rdc_49ful_nodes_cfg20xb_snp.json  form_all_nod_all_bln_grd_cir_72rsp_2rct_20rdc_73ful_nodes_cfg30xb_snp.json  form_all_nod_all_bln_grd_cir_72rsp_2rct_20rdc_76ful_nodes_cfg31xb_snp.json  form_all_nod_all_bln_grd_cir_88rsp_1rct_12rdc_92ful_nodes_cfg12xb_snp.json  form_all_nod_all_bln_grd_cir_96rsp_1rct_12rdc_92ful_nodes_cfg12xb_snp.json  form_all_nod_all_bln_grd_cir_96rsp_1rct_12rdc_92ful_nodes_cfg16xb12on4of.json  form_all_nod_all_bln_grd_cir_96rsp_1rct_12rdc_92ful_nodes_cfg18xb12on6of.json  form_all_nod_all_bln_grd_cir_96rsp_1rct_12rdc_sld_nodes_cfg19xb13on6of.json  form_all_nod_all_bln_grd_rec_1x2_0sph_46spv_sld_nodes_cfg2xb_snp.json  form_all_nod_all_bln_grd_rec_1x2_54spc_sld_nodes_cfg2xb_snp.json  form_all_nod_all_bln_grd_rec_1x2_60sph_48spv_sld_nodes_cfg2xb_snp.json  form_all_nod_all_bln_grd_rec_1x3_0sph_46spv_sld_nodes_cfg3xb_snp.json  form_all_nod_all_bln_grd_rec_1x3_54spc_sld_nodes_cfg3xb_snp.json  (+119 more)
In-Flight Assets/: dummy_button_template.psd  (+3 more)
(+5526 files in other folders)
