cmake_minimum_required(VERSION 3.4.1)

# now build app's shared lib
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")

add_library(gl2jni SHARED
		__DROID.cpp
        SpawnWave.cpp
        Balloon.cpp
        CameraMenu.cpp
        core_app_shell.cpp
        core_social.cpp
        core_web.cpp
        Dart.cpp
        DragableCanvas.cpp
        FAchievement.cpp
        FAnimation.cpp
        FApp.cpp
        FButton.cpp
        FCanvas.cpp
        FColor.cpp
        FDrawQuad.cpp
        FFile.cpp
        FFileTable.cpp
        FFloatBufferCache.cpp
        FFloatList.cpp
        FFont.cpp
        FGestureCanvas.cpp
        FHashMap.cpp
        FImage.cpp
        FImageBundler.cpp
        FIndexBufferCache.cpp
        FIndexList.cpp
        FIntList.cpp
        FJoystick.cpp
        FLight.cpp
        FLine.cpp
        FList.cpp
        FloatingCamera.cpp
        FMath.cpp
        FMatrix.cpp
        FModelData.cpp
        FModelDataPacked.cpp
        FModelDataSequence.cpp
        FNotificationCenter.cpp
        FObject.cpp
        FParticle.cpp
        FPoint.cpp
        FPointList.cpp
        FPolyPath.cpp
        FPrimitive.cpp
	    FSpriteBufferCache.cpp
        FQuad.cpp
        FRandomizer.cpp
        FRect.cpp
        FResource.cpp
        FScrollCanvas.cpp
        FScrollCanvasPaged.cpp
        FSize.cpp
        FSlider.cpp
        FSound.cpp
        FSpline.cpp
        FSprite.cpp
        FSpriteSequence.cpp
        FString.cpp
        FStringBuffer.cpp
        FTexture.cpp
        FTextureCache.cpp
        FTouchManager.cpp
        FUniforms.cpp
        FVec2.cpp
        FVec3.cpp
        FVertexBuffer.cpp
        FWindow.cpp
        FXML.cpp
        Game.cpp
		GameContainer.cpp
        GameObject.cpp
        GameRenderer.cpp
        GFXApp.cpp
        GraphicsInterface.cpp
        LevelSelectorScreen.cpp
        LightConfigurationScene.cpp
        OpenGLEngine.cpp
        os_core_app_shell_android.cpp
        os_core_graphics.cpp
        os_core_includes.cpp
        os_core_outlets_android.cpp
        os_core_social.cpp
        os_core_sound_android.cpp
        os_core_web.cpp
        PathEditorMenu.cpp
        PGMainCanvas.cpp
        PGMainToolbar.cpp
        PGNode.cpp
        PGPath.cpp
        PGPathEditor.cpp
        PhongConfiguration.cpp
        PhongLightMenu.cpp
        PlatformGraphicsInterface.cpp
        ScreenTransformMenu.cpp
		ShaderProgramSpriteWhite.cpp
		ShaderProgramSpriteNode.cpp
		ShaderProgramSprite.cpp
		ShaderProgramSimpleModelIndexed.cpp
		ShaderProgramSimpleModel.cpp
		ShaderProgramShapeNode.cpp
		ShaderProgramShape3D.cpp
		ShaderProgramModelIndexedLightedPhong.cpp
		ShaderProgramModelIndexedLightedAmbientDiffuse.cpp
		ShaderProgramModelIndexedLightedAmbient.cpp
		ShaderProgramModelIndexed.cpp
		ShaderProgram.cpp
        ToolMenu.cpp
        ToolMenuHeader.cpp
        ToolMenuModalUnderlay.cpp
        ToolMenuPanel.cpp
        ToolMenuPanelHeader.cpp
        ToolMenuSection.cpp
        ToolMenuSectionRow.cpp
        UIAlignmentPicker.cpp
        UIAlignmentPickerButton.cpp
        UIButton.cpp
        UICheckBox.cpp
        UIElement.cpp
        UIImagePicker.cpp
        UIImagePickerCell.cpp
        UILabel.cpp
        UIRoundedRect.cpp
        UISegment.cpp
        UISegmentButton.cpp
        UISlider.cpp
        UIStepper.cpp
        Util_ScreenFrame.cpp
		Transform3D.cpp
		Transform2D.cpp
		LevelData.cpp
		GameLevelController.cpp
		LevelSection.cpp
		LevelSelectorScreen.cpp
		LevelWave.cpp
        LevelWaveChunk.cpp
        LevelWaveFormation.cpp
        LevelWavePath.cpp
        )

# add lib dependencies
target_link_libraries(gl2jni
                      android
                      log 
                      EGL
                      GLESv2
		              OpenSLES)

